fixed high score

--- a/templates/board.html
+++ b/templates/board.html
@@ -22,7 +22,9 @@
         </br>
         <button id="submit"> Submit </button>
     </form>
-    <p>Score: <span id="result"></span></p>
-    <div id ="gameOverMsg"></div>
+    <p>Highest Score: {{ high_score }}</p>
+    <p>Your Score: <span id="result"></span></p>
+
+    <div id="gameOverMsg"></div>
     
 {% endblock %}
